# HAC2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: .gitignore
src/hac/: AppSearch.cpp  AppSearch.h  ArgContainer.cpp  ArgContainer.h  BSPPatcher.cpp  BSPPatcher.h  Bookmarker.cpp  Bookmarker.h  BudgetDisplay.cpp  BudgetDisplay.h  ConsoleCommands.cpp  CrashHandler.cpp  CrashHandler.h  CustomChat.cpp  CustomChat.h  DebugHelper.cpp  Direct3D.cpp  DiscordHandlers.cpp  DiscordHandlers.h  DisplayModes.cpp  DisplayModes.h  DisplayUpdater.cpp  DisplayUpdater.h  Eggs.cpp  Eggs.h  EngineFunctions.cpp  EngineFunctions.h  EnginePointers.cpp  EnginePointers.h  EngineState.cpp  EngineState.h  EngineTypes.cpp  EngineTypes.h  EventSubscriber.cpp  Events.h  ExFlagHandler.cpp  ExFlagHandler.h  FancyPrint.cpp  File.h  FoVControl.cpp  (+118 more)
src/hac/happyhttp/: happyhttp.cpp  happyhttp.h
src/hac/json/: json-forwards.h  json.h
src/hac/trex/: TRexpp.h
src/loader/: DebugHelper.cpp  DebugHelper.h  Downloader.cpp  Downloader.h  IHook.h  InitHooks.cpp  InitHooks.h  PatchGroup.cpp  PatchGroup.h  Patcher.cpp  Patcher.h  Shared.h  codefinder.cpp  codefinder.h  loader.cpp  loader.rc  misc.h  resource.h
src/loader/happyhttp/: happyhttp.cpp  test.cpp
